# RNAmeta_Tauri

./: .gitignore  .taurignore  AGENTS.md  AI_GUIDELINES.md  index.html  make_md.cjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/scripts/: gene_matrix_runner.R  gene_type_runner.R  meta_plot_runner.R  peak_distribution_runner.R  peak_exon_num_runner.R  peak_exon_size_runner.R  peak_exon_type_runner.R  peak_gene_size_runner.R  psite_offset.R  ribo_codon.R  ribo_coverage_mrna.R  ribo_orf_pause.R  ribo_psite_calib.R  ribo_qc.R  splicesite_runner.R  tools_fastq_to_fasta.R  transcription_runner.R  translation_runner.R
src-tauri/resources/scripts/rna/: desktop_meta_plot_data.R  desktop_peak_distribution_data.R  gene_matrix.analysis.R  gene_matrix.chart.R  gene_matrix.data.R  gene_matrix.functions.R  gene_type.analysis.R  gene_type.chart.R  gene_type.data.R  gene_type.functions.R  meta_plot.analysis.R  meta_plot.annotation.R  meta_plot.chart.R  meta_plot.mapping.R  meta_plot.plot.R  meta_plot_runtime_cache.R  peak_distribution.analysis.R  peak_distribution.annotation.R  peak_distribution.chart.R  peak_distribution.plot.R  peak_distribution.shared.R  peak_distribution.stats.R  peak_distribution_runtime_cache.R  peak_exon.shared.R  peak_exon_num.analysis.R  peak_exon_num.chart.R  peak_exon_num.data.R  peak_exon_num.functions.R  (+28 more)
src-tauri/src/: embedded_scripts.rs  lib.rs  main.rs  upload_preview.rs
(+134 files in other folders)
