[package]
name = "ribometa"
version = "0.1.0"
description = "A professional bioinformatics desktop application for Ribo-seq data analysis, calibration, and visualization."
authors = ["Rwtkc", "LiuQ"]
edition = "2021"

[lib]
name = "ribometa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
rand = "0.8"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
